--- a/codegen/build.gradle
+++ b/codegen/build.gradle
@@ -20,6 +20,10 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    // configuration generator for service providers
+    implementation "com.google.auto.service:auto-service:1.0-rc4"
+    kapt "com.google.auto.service:auto-service:1.0-rc4"
+
 }
 
 sourceCompatibility = "7"
